SERVER-56173: FCV upgrade to 5.0 can fail to refresh collection on shards in presence of concurrent drop